--- a/index.ipynb
+++ b/index.ipynb
@@ -57,7 +57,7 @@
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def number_of_destinations(x):\n",
+    "def number_of_destinations():\n",
     "    for x in \n",
     "    pass"
    ]
