--- a/index.ipynb
+++ b/index.ipynb
@@ -59,8 +59,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def number_of_destinations():\n",
     "    for travel_destination in travel_destinations:\n",
-    "        \n",
-    "        \n",
+    "        len(travel_destin)\n",
     "    pass"
    ]
   },
