--- a/index.ipynb
+++ b/index.ipynb
@@ -64,11 +64,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_destinations() # 6"
+    "tra # 6"
    ]
   },
   {
