--- a/index.ipynb
+++ b/index.ipynb
@@ -64,11 +64,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "number_of_destinations() takes 0 positional arguments but 1 was given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-4f1e56fccb1b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnumber_of_destinations\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtravel_destinations\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# 6\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: number_of_destinations() takes 0 positional arguments but 1 was given"
+     ]
+    }
+   ],
    "source": [
-    "tra # 6"
+    "number_of_destinations(travel_destinations) # 6"
    ]
   },
   {
