Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,15 +52,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "can't assign to function call (<ipython-input-8-f6d799384c83>, line 4)",
+     "evalue": "can't assign to function call (<ipython-input-9-ae6eee200362>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-f6d799384c83>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    len(travel_destinations) = number_of_destinations\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to function call\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-ae6eee200362>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    len(travel_destinations) = 'number_of_destinations'\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to function call\n"
      ]
     }
    ],
@@ -68,7 +68,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def number_of_destinations():\n",
     "    for travel_destination in travel_destinations:\n",
-    "        len(travel_destinations) = number_of_destinations"
+    "        len(travel_destinations)"
    ]
   },
   {
