--- a/index.ipynb
+++ b/index.ipynb
@@ -57,8 +57,7 @@
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def number_of_destinations():\n",
-    "     len(travel_destinations)"
+    "def number_of_destinations():\n"
    ]
   },
   {
