--- a/index.ipynb
+++ b/index.ipynb
@@ -195,7 +195,8 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "favorite_destination()\n",
     "\n",
-    "def favorite_destination\n",
+    "def favorite_destination():\n",
+    "    \n",
     "\n",
     "travel_destinations[-1] # 'madagascar'"
    ]
