Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -196,7 +196,7 @@
     "favorite_destination()\n",
     "\n",
     "def favorite_destination():\n",
-    "    \n",
+    "    favorite_destination.append\n",
     "\n",
     "travel_destinations[-1] # 'madagascar'"
    ]
