--- a/index.ipynb
+++ b/index.ipynb
@@ -188,15 +188,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'croatia'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "favorite_destination()\n",
     "\n",
     "def favorite_destination():\n",
-    "    favorite_destination.append\n",
+    "    favorite_destination.append('madagascar')\n",
     "\n",
     "travel_destinations[-1] # 'madagascar'"
    ]
