Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -208,6 +208,7 @@
     "\n",
     "def favorite_destination():\n",
     "    favorite_destination.append('madagascar')\n",
+    "    return 'madagascar'\n",
     "\n",
     "travel_destinations[-1] # 'madagascar'"
    ]
