--- a/index.ipynb
+++ b/index.ipynb
@@ -209,7 +209,7 @@
     "favorite_destination()\n",
     "\n",
     "def favorite_destination():\n",
-    "    favorite_destinations.append('madagascar')\n",
+    "    favorite_destination.append('madagascar')\n",
     "    return 'madagascar'\n",
     "\n",
     "travel_destinations[-1] # 'madagascar'"
