--- a/index.ipynb
+++ b/index.ipynb
@@ -229,7 +229,8 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    Destinations = []\n",
-    "    "
+    "    for x in travel_destinations:\n",
+    "        "
    ]
   },
   {
