Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -230,7 +230,8 @@
     "def capitalize_countries():\n",
     "    Destinations = []\n",
     "    for x in travel_destinations:\n",
-    "        Destinations.append(x.title)"
+    "        Destinations.append(x.title)\n",
+    "        "
    ]
   },
   {
