Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -231,7 +231,7 @@
     "    Destinations = []\n",
     "    for x in travel_destinations:\n",
     "        Destinations.append(x.title)\n",
-    "        return Destinations"
+    "        return Destinat"
    ]
   },
   {
