--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,14 +231,30 @@
     "    Destinations = []\n",
     "    for x in travel_destinations:\n",
     "        Destinations.append(x.title)\n",
-    "        return Destinat"
+    "    return Destinations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<function str.title>,\n",
+       " <function str.title>,\n",
+       " <function str.title>,\n",
+       " <function str.title>,\n",
+       " <function str.title>,\n",
+       " <function str.title>]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "capitalize_countries() # ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
    ]
