--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,27 +230,27 @@
     "def capitalize_countries():\n",
     "    Destinations = []\n",
     "    for x in travel_destinations:\n",
-    "        Destinations.append(stx.title)\n",
+    "        Destinations.append(str(x.title))\n",
     "    return Destinations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>]"
+       "['<built-in method title of str object at 0x7f0c401c4370>',\n",
+       " '<built-in method title of str object at 0x7f0c401c2960>',\n",
+       " '<built-in method title of str object at 0x7f0c401c27d8>',\n",
+       " '<built-in method title of str object at 0x7f0c401d5b90>',\n",
+       " '<built-in method title of str object at 0x7f0c401d5f10>',\n",
+       " '<built-in method title of str object at 0x7f0c4016a1f0>']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
