--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,27 +230,22 @@
     "def capitalize_countries():\n",
     "    Destinations = []\n",
     "    for x in travel_destinations:\n",
-    "        Destinations.append(x.title)\n",
+    "        Destinations.append(x.title())\n",
     "    return Destinations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>]"
+       "['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
